# gtime

./: .gitignore  .travis.yml  Makefile.am  README  configure.ac  getopt.c  getopt.h  gt_http.c  gt_http.h  gtime-sign  gtime-sign.bat  gtime-test.c  gtime-verify  gtime-verify.bat  hashchain.h  winmake.bat
build-aux/: test-wrapper.sh
doc/: TestData.txt.gtts  gtime-test.1  gtime.1  run-tests.sh  trust.pem
packaging/deb/: create_deb.sh
packaging/deb/gtime/DEBIAN/: control
packaging/rpm/: gtime.spec
